...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addStore"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="128dp"
        android:enabled="true"
        android:text="Add Store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
